# flex-beef

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/: flex.lib
libs/windows/: flex.lib  flexd.lib
libs/windows/x64/: flex.lib  flex_d.lib
src/: flex.bf
